; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Hash.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Array = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Array*)* @Array_Hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Array_Hash(%struct.Array* %0) #0 {
  %2 = alloca %struct.Array*, align 8
  %3 = alloca %struct.Array*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.Array* %0, %struct.Array** %2, align 8
  %6 = load %struct.Array*, %struct.Array** %2, align 8
  store %struct.Array* %6, %struct.Array** %3, align 8
  store i32 0, i32* %4, align 4
  store i64 0, i64* %5, align 8
  br label %7

7:                                                ; preds = %20, %1
  %8 = load i64, i64* %5, align 8
  %9 = load %struct.Array*, %struct.Array** %3, align 8
  %10 = getelementptr inbounds %struct.Array, %struct.Array* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ult i64 %8, %11
  br i1 %12, label %13, label %23

13:                                               ; preds = %7
  %14 = load %struct.Array*, %struct.Array** %3, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @Array_Item(%struct.Array* %14, i64 %15)
  %17 = call i32 @hash(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = xor i32 %18, %17
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %13
  %21 = load i64, i64* %5, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %5, align 8
  br label %7

23:                                               ; preds = %7
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @hash(i32) #1

declare dso_local i32 @Array_Item(%struct.Array*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
